RESOLVED FIXED160020
[GTK][Threaded Compositor] Overlay scrollbars shouldn't be a requirement of the threaded compositor
https://bugs.webkit.org/show_bug.cgi?id=160020
Summary [GTK][Threaded Compositor] Overlay scrollbars shouldn't be a requirement of t...
Carlos Garcia Campos
Reported 2016-07-21 06:10:20 PDT
It has been a requirement only because we didn't really know why frame scrollbars were not rendered when using the threaded compositor.
Attachments
Patch (2.72 KB, patch)
2016-07-21 06:14 PDT, Carlos Garcia Campos
mcatanzaro: review+
Carlos Garcia Campos
Comment 1 2016-07-21 06:14:45 PDT
Carlos Garcia Campos
Comment 2 2016-07-21 09:06:24 PDT
Note You need to log in before you can comment on or make changes to this bug.